--- a/style.css
+++ b/style.css
@@ -9,4 +9,67 @@
 
 body{ 
 background-color: var(--fundo);
+margin: 0;
+}
+
+footer{
+    background-color: var(--preto);
+    position:fixed;
+    bottom: 0;
+    color: var(--branco);
+    width: 100%;
+    text-align: center;
+}
+
+#container{
+    padding: 4rem;
+    display: flex;
+    gap: 3rem;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.cartao{
+    flex-grow: 1;
+    flex-basis: calc(33% - 6rem);
+    height: 20rem;
+    margin: 1rem;
+}
+
+.conteudo-cartao{
+    background-color: var(--cartao-frente);
+    height: 100%;
+    text-align: center;
+transform-style: preserve-3d;
+transition: transform 300ms ease-in-out;
+}
+
+.conteudo-cartao h3{
+    color: var(--destaque);
+    border: 1px solid var(--destaque);
+    position: absolute;
+    margin: 0.5rem;
+    padding: 0.5rem;
+    text-align: left;
+    border-radius: 0.6rem;
+    font-size: 1vw;
+}
+.conteudo-cartao p{
+    margin-top: 4rem;
+    padding: 2rem;
+    font-size: 1.4vw;
+}
+
+.pergunta-cartao{
+    font-weight: 500;
+}
+
+.resposta-cartao{
+    font-weight: 700;
+    color: var(--destaque);
+}
+
+.cartao:hover .conteudo-cartao{
+    transform: rotateY(180deg);
 }
