--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --fundo: #6959CD;
     --cartao-frente: #CAE1FF;
     --cartao-verso: #EE3B3B;
-    --destaque: #FFD700;
+    --destaque: #ffd900d0;
     --preto: #000000;
     --branco: #F8F8FF;
 }
