--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ transition: transform 300ms ease-in-out;
     text-align: left;
     border-radius: 0.6rem;
     font-size: 1vw;
+    backface-visibility: hidden;
 }
 .conteudo-cartao p{
     margin-top: 4rem;
@@ -68,8 +69,17 @@ transition: transform 300ms ease-in-out;
 .resposta-cartao{
     font-weight: 700;
     color: var(--destaque);
+    transform: rotateY(180deg);
+    background-color: var(--cartao-verso);
+    border: 2px solid var(--destaque);
 }
 
 .cartao:hover .conteudo-cartao{
     transform: rotateY(180deg);
+}
+.pergunta-cartao, .resposta-cartao{
+    backface-visibility: hidden;
+    position: absolute;
+    height: 100%;
+    width: 100%;
 }
