--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root{ 
     --fundo: #6959CD;
-    --cartao-frente: #CAE1FF;
+    --cartao-frente: #98c2fa;
     --cartao-verso: #EE3B3B;
     --destaque: #e5ff00;
     --preto: #000000;
