--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ transition: transform 300ms ease-in-out;
     border: 2px solid var(--destaque);
 }
 
-.cartao:hover .conteudo-cartao{
+.cartao.active .conteudo-cartao{
     transform: rotateY(180deg);
 }
 .pergunta-cartao, .resposta-cartao{
