--- a/pagina2.css
+++ b/pagina2.css
@@ -20,5 +20,41 @@ footer{
     width: 100%;
     text-align: center;
 }
-
-
+header{
+    background-color: var(--preto);
+    display: flex;
+    justify-content: space-around;
+    padding: 2rem;
+}
+header a {
+    color: var(--branco);
+    text-decoration: none;
+}
+footer{
+    background-color: var(--preto);
+    position: fixed;
+    bottom: 0;
+    color: var(--branco);
+    width: 100%;
+    text-align:center;
+}
+#container{
+    display: grid;
+    gap: 3rem;
+    padding: 4rem
+}
+.cartao{
+    background-color: var(--cartao-frente);
+    padding: 40px;
+    border: 1px solid var(--destaque);
+    box-shadow: 5px 5px 20px 5px var(--preto);
+}
+.cartao:hover{
+    transform: scale(1.04);
+}
+.resposta-cartao{
+    background-color: var(--cartao-verso);
+    padding: 40px;
+    color: var(--branco);
+    display: none;
+}
